--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: 'Open Sans';
+    src: url('fonts/opensans-extrabold-webfont.eot');
+    src: url('fonts/opensans-extrabold-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/opensans-extrabold-webfont.woff2') format('woff2'), url('fonts/opensans-extrabold-webfont.woff') format('woff'), url('fonts/opensans-extrabold-webfont.ttf') format('truetype'), url('fonts/opensans-extrabold-webfont.svg#OpenSans') format('svg');
+    font-weight: 900;
+    font-style: normal;
+}
+
 * {
     padding: 0;
     margin: 0;
