--- a/styles.css
+++ b/styles.css
@@ -142,15 +142,13 @@ h1 span {
 }
 
 .screen {
-    text-align: center;
     display: none;
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    position: fixed;
+    left: 0; right: 0;
+    top: 0; bottom: 0;
+    text-align: center;
     background: rgba(192, 57, 43, 0.9);
+    overflow: scroll;
 }
 
 .screen .screen_wrap {
@@ -172,7 +170,7 @@ h1 span {
 .screen button {
     background: #e74c3c;
     color: #ecf0f1;
-    margin-top: 40px;
+    margin: 40px 0;
     width: 200px;
     height: 50px;
     border: 3px solid #ecf0f1;
